--- a/Физпластика/index.html
+++ b/Физпластика/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="price.html" >Прайс-лист</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="calendar.html">Косметические наборы</a>
+              <a class="nav-link" href="cosmetic_set.html">Косметические наборы</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="calendar.html">Контакты</a>
@@ -52,7 +52,7 @@
     </div>
     <section class="features">
         <div class="feature_first scroll-animate">
-          <img src="./img/кашпо.png" height="200px" alt="Лицо">
+          <img src="./img/кашпо.png" height="172px" alt="Лицо">
           <b>ФЕЙСПЛАСТИКА</b>
           <p>В работе я основываюсь на знаниях анатомии и уникальной структуры каждого лица. В процессе не используются инъекции или хирургическое вмешательство,и тканей.</p>
         </div>
@@ -115,7 +115,7 @@
                   };
               });
               </script>
-                <button type="submit" class="form_search">Отправить</button>
+                <button type="submit" class="form_search" style="margin-top: 23%;">Отправить</button>
             </form>
             <?php
         } else {
@@ -178,6 +178,5 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 </html>
