--- a/Физпластика/cosmetic_set.html
+++ b/Физпластика/cosmetic_set.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#">Косметические наборы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="calendar.html">Контакты</a>
+              <a class="nav-link" href="contacts.html">Контакты</a>
           </li>
           </ul>
         </div>
@@ -156,8 +156,7 @@
                 </div>
             </div>
         </div>
-    </div>
-      </div>
+      </main>
     <footer class="main_footer">
         <div class="contacts">
           <div class="social">
