--- a/Физпластика/index.html
+++ b/Физпластика/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="cosmetic_set.html">Косметические наборы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="calendar.html">Контакты</a>
+              <a class="nav-link" href="contacts.html">Контакты</a>
           </li>
           </ul>
         </div>
