--- a/Физпластика/price.html
+++ b/Физпластика/price.html
@@ -133,6 +133,7 @@
               </div>
           </div>
       </div>
+    </main>
   <footer class="main_footer">
     <div class="contacts">
       <div class="social">
