Редакция и удаление картинок
Удаление картинок лишних, редакция карусели и ее адаптация, добавление класса в блок main

--- a/Физпластика/cosmetic_set.html
+++ b/Физпластика/cosmetic_set.html
@@ -36,12 +36,13 @@
     </nav>
   </header>
   <body>
-    <div class="card mb-3" style="max-width: 100%; border: none; background: transparent;">
+    <main class="container">
+    <div class="card mb-3" style="max-width: 100%; border: none; background: transparent; margin-top: 3%; margin-bottom: 3%;">
         <div class="row g-0">
-          <div class="col-md-4">
+          <div class="col-md-5">
             <img src="./img/82189c5d-a678-42f5-95e0-2a3da5ec1fad.jpeg" class="img-fluid rounded-start mt-3" alt="...">
           </div>
-          <div class="col-md-8">
+          <div class="col-md-7">
             <div class="card-body">
               <h5 class="card-title mt-4">FLAX LIFT</h5>
               <p class="card-text mt-5 mb-5">Омолаживающая безинъекционная процедура для лица FLAX LIFT – уход нового поколения, не имеющий по эффективности аналогов среди других неинвазивных процедур.<br> В её основе лежат достижения корейских разработчиков косметики, которые успешно доработаны российскими технологами. <br> Ночная сыворотка FlaxSerum комплексно улучшает качество кожи - активно борется с признаками фотостарения, обеспечивает лифтинг эффект, осветляет пигментацию.
@@ -72,19 +73,19 @@
           </div>
         </div>
       </div>
-    <div class="container-xl mt-6">
+    <div class="container-xl mt-8">
         <h1 class="text-center mb-4">Каталог товаров</h1>
         <div id="carouselExample" class="carousel carousel-light slide" data-bs-ride="carousel">
             <div class="carousel-inner w-100">
                 <div class="carousel-item active">
                     <div class="row">
-                        <div class="col-6 col-md-4">
+                        <div class="col-4 col-sm-4">
                             <div class="productCard mx-2">
                                 <img class="img-fluid" src="./img/b4dcff60-882f-4a78-8972-f4c830cf7a8d.jpeg" alt="Товар 1">
                                 <h4>Flex маска</h4>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="col-4 col-sm-4">
                             <div class="productCard mx-2">
                                 <img class="img-fluid" src="./img/05ada82e-fefd-4576-a021-30034261f5aa.jpeg" alt="Товар 2">
                                 <h4>Flex масло</h4>
@@ -94,13 +95,13 @@
                 </div>
                 <div class="carousel-item">
                     <div class="row">
-                        <div class="col-6 col-md-4">
+                        <div class="col-4 col-sm-4">
                             <div class="productCard mx-2">
                                 <img class="img-fluid" src="./img/05ada82e-fefd-4576-a021-30034261f5aa.jpeg" alt="Товар 3">
                                 <h4>Flex скраб</h4>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="col-4 col-sm-4">
                             <div class="productCard mx-2">
                                 <img class="img-fluid" src="./img/b4dcff60-882f-4a78-8972-f4c830cf7a8d.jpeg" alt="Товар 4">
                                 <h4>Flex лосьон</h4>
@@ -110,16 +111,16 @@
                 </div>
                 <div class="carousel-item">
                     <div class="row">
-                        <div class="col-6 col-md-4">
+                        <div class="col-4 col-sm-4">
                             <div class="productCard mx-2">
                                 <img class="img-fluid" src="./img/05ada82e-fefd-4576-a021-30034261f5aa.jpeg" alt="Товар 5">
                                 <h4>FLEX крем</h4>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4">
+                        <div class="col-4 col-sm-4">
                             <div class="productCard mx-2">
                                 <img class="img-fluid" src="./img/b4dcff60-882f-4a78-8972-f4c830cf7a8d.jpeg" alt="Товар 6">
-                                <h4>FLEX Сыворотка</h4>
+                                <h4>FLEX мусс</h4>
                             </div>
                         </div>
                     </div>
@@ -136,11 +137,11 @@
         </div>
     </div>
     <div class="card mb-3" style="max-width: 100%; border: none; background: transparent;">
-        <div class="row g-0">
-            <div class="col-md-4">
+        <div class="row g-0 mb-5">
+            <div class="col-md-5">
                 <img src="./img/47fa65b8-222b-4c24-a83e-6e8a20986f22.jpeg" class="img-fluid mt-3" alt="...">
             </div>
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <div class="card-body">
                     <h5 class="card-title mt-4" style="color: white;">FLAX LIFT</h5>
                     <p class="card-text mt-5 mb-5" style="color: white; margin-bottom: 15px;">Омолаживающая безинъекционная процедура для лица FLAX LIFT – уход нового поколения, не имеющий по эффективности аналогов среди других неинвазивных процедур.<br>
