--- a/Физпластика/price.html
+++ b/Физпластика/price.html
@@ -35,7 +35,7 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class="container">
     <section>
       <section style="padding-top: 2%; padding-bottom: 3%;">
         <h1 style="color: white; text-align: center;">Стоимость услуг</h1>
@@ -115,7 +115,7 @@
     <div class="card mb-3" style="max-width: 100%; border: none; background: transparent;">
       <div class="row g-0">
           <div class="col-md-4">
-              <img src="./img/47fa65b8-222b-4c24-a83e-6e8a20986f22.jpeg" class="img-fluid mt-3" alt="...">
+              <img src="./img/dd8d8a5d-b7b9-400b-857b-4e5a8dfbe042.jpeg" class="img-fluid h-100" alt="...">
           </div>
           <div class="col-md-8">
               <div class="card-body">
