--- a/Физпластика/contacts.html
+++ b/Физпластика/contacts.html
@@ -35,6 +35,7 @@
       </div>
     </nav>
   </header>
+  <main class="container">
   <div class="card mb-3" style="max-width: 100%; border: none; background: transparent;">
         <div class="row g-0">
           <div class="col-md-4">
